--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --ignore ./snippets/* index.js",
+    "dev": "nodemon --ignore ./snippets index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
